# syft-client

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  CHANGELOG.md  CI_SETUP.md  CONTRIBUTING.md  Deletion_record.md  Deletion_record_concise.md  ENVIRONMENT_WORKAROUND.md  GETTING_STARTED.md  GOOGLE_API_REFACTOR_SUMMARY.md  GOOGLE_OAUTH2_CHANGES.md  Justfile  Latency Testing.ipynb  README.md  REFERENCE.md  RELEASE_NOTES_0.1.5.md  SYNC_ECHO_PREVENTION.md  TODO.md  Untitled.ipynb  andrew_nonsense_4_changes.patch  check_inbox_deletions.md  debug_colab.py  debug_colab_focused.py  debug_which_transport.py  example_file_watcher.py  notebook_file_observer.py  notification_config.minimal.yaml  potential_improvements.md  principles.md  pyproject.toml  pytest.ini  receiver_design.md  requirements.txt  setup_syftbox.ipynb  syft_client_tutorial.ipynb  syft_message_tutorial.ipynb  syft_serve-0.3.4-py3-none-any.whl  syftbox_file_observer.py  (+9 more)
.claude/: settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
benchmarks/: benchmark_dataset_load.py  benchmark_ds_event_sync.ipynb  benchmark_initial_do_sync.py  benchmark_job_sync.py  benchmark_loadtime.py  benchmark_rolling_state.py  download_files_parallel.py
ci/: run_notebook_local.py  run_notebook_smart.py
datasets/: conversations.csv
docker/: Dockerfile  README.md
docs/: API.md  GOOGLE_OAUTH2_FLOW.md  GOOGLE_OAUTH2_SETUP.md  auth.md  (+5 more)
transport_layers_solutions/syft_gcp/: __init__.py  auth.py  cleanup.sh  constants.py  gcloud_oauth.py  pyproject.toml  storage.py  transport.py
(+428 files in other folders)
